--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -5,12 +5,12 @@
     font-family: sans-serif;
 }
 
-body{
-    padding: 0 10vw;
+
+h1{
+    font-size:4rem;
 }
 
 header{
-    margin-top: 2rem;
     min-height: 20vh;
 }
 
@@ -58,19 +58,27 @@ section>h2{
     margin-bottom: 2rem;
     text-align: center;
     border: 2px solid black;
+    background-color: rgb(250, 248, 216);
 }
 
 .articles{
     display: inline-block;   
     margin-left: 2rem;
     max-width: 75%;
+    background-color: rgb(250, 248, 216);
+    padding: 2rem;
+    box-shadow: 0.5rem 0.5rem rgb(94, 119, 92);
+   
 }
 
 article{
     margin-bottom: 1rem;
+   
 }
 
 main{
     min-height: 76vh;
-    
 }
+
+
+
