--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -1,3 +1,5 @@
+/*
+
 *{
     padding: 0;
     margin: 0;
@@ -79,6 +81,126 @@ article{
 main{
     min-height: 76vh;
 }
+*/
 
 
+*{
+    padding: 0;
+    margin: 0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
 
+header{
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    background-color: rgb(33, 25, 21);
+
+    
+}
+
+h1{
+    font-size: 4vw;
+    color: white;
+    margin-left: 1rem;
+    text-shadow: 1px 1px rgba(0, 0, 0, 0.358);
+}
+
+nav>ul{
+    position: absolute;
+    top: -1rem;
+    right: 0.5rem;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 0.5rem;
+}
+
+nav a{
+    text-decoration: none;
+    color: white;
+    background-color: #4472c4;
+    border: 2px solid rgb(0, 0, 187);
+    padding: 4px 12px;
+    box-shadow: 2px 2px rgba(0, 0, 0, 0.358);
+    
+}
+
+#current{
+    background-color: rgb(107, 177, 1);
+}
+
+.nav-img{
+    height: 15vw;
+    width: 100%;
+    object-fit: cover;
+    object-position: 50% 25%;
+    display: block;
+    
+    
+}
+
+.header{
+    position: relative;
+    
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+}
+
+main{
+    flex: 1;
+}
+
+section{
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.section-title{
+   display: flex;
+   justify-content: center;
+   
+   padding: 0.5rem;
+   background-color: rgb(96, 159, 151);
+   color: white;
+}
+
+
+.section-body{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    flex-wrap: wrap;
+    
+}
+
+.articles{
+    flex: 1;
+    margin: 2vw;
+    
+    padding: 1vw;
+    border: 2px solid rgb(221, 115, 115);
+    background-color: rgb(234, 217, 76);
+    border-radius: 10px 10px;
+
+    min-width: 75vw;
+}
+
+.section-logo{
+    flex-grow: 0;
+    /*height: 20vw;*/
+    max-height: 10rem;
+    margin: 2vw;
+
+}
+
+article{
+    margin-bottom: 2vw;
+    /*box-shadow: 2px 2px rgba(0, 0, 0, 0.358);*/
+}
