--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -174,3 +174,56 @@ td, tr, th{
     justify-content: space-between;
 }
 
+
+
+@media(max-width: 435px){
+    nav ul, nav li{
+        position: relative;
+        top: 0;
+        right: 0;
+        display: flex;
+        flex-direction: column;
+        list-style: none;
+        gap: 0;
+        flex-wrap: nowrap;
+        align-items: center;
+        width: 100%;
+        
+    }
+    
+    nav a{
+        text-decoration: none;
+        color: white;
+        background-color: #4472c4;
+        border: 2px solid rgb(0, 0, 187);
+        padding: 0px 0px;
+        box-shadow: 0px 0px rgba(0, 0, 0, 0.358);
+        width: 100%;
+        text-align: center;
+        padding: 0.25rem 0 0.25rem 0;   
+    }
+    h1{
+        font-size: 5vw;
+        margin: 0;
+        text-align: center;
+        padding: 0.5rem;
+    }
+    header{
+        gap: 0;
+    }
+    .articles{
+        margin: 0;    
+        padding: 6vw;
+    }
+    td, tr, th{
+        text-align: left;
+        max-width: 20vw;
+        font-size:3vw;
+    }
+    
+
+    #contact-info{
+        display: flex;
+        flex-direction: column;       
+    }
+}
