--- a/assets/style/styles.css
+++ b/assets/style/styles.css
@@ -174,7 +174,80 @@ td, tr, th{
     justify-content: space-between;
 }
 
+/* Registration form */
 
+h4{
+    margin-bottom: 1rem;
+}
+
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.col-2{
+    width: 48%;
+    display: flex;
+    align-items: center;
+}
+.col-1{
+    width: 98%;
+    display: flex;
+    align-items: center;
+}
+fieldset{
+    padding: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    width: 725px;
+    border-style: none;
+}
+
+label{
+    margin: 1%;
+    width:max-content;
+}
+
+input[type="text"], input[type="number"], input[type="date"]{
+    flex: 1;
+    border-style: none;
+    background-color: transparent;
+    border-bottom: 1px solid black;
+}
+input[type="text"]:focus, input[type="number"]:focus, input[type="date"]:focus{
+    outline: none;
+}
+
+/* form fieldset size */
+
+#form-school, #form-position, #form-uniform{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    column-gap: 5rem;
+    
+}
+#form-school{
+    height: 4rem;
+}
+#form-position{
+    height: 2.5rem;
+}
+#form-uniform{
+    height: 5.25rem;
+}
+
+#signature{
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+#submit-button{
+    width: 5rem;
+    height: 2rem;
+    margin-top: 1rem;
+}
 
 @media(max-width: 435px){
     nav ul, nav li{
@@ -226,4 +299,42 @@ td, tr, th{
         display: flex;
         flex-direction: column;       
     }
+
+    #maps{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+   
+}
+
+@media(max-width: 780px){
+    fieldset{
+        flex-shrink: 1;
+        max-width: 80vw;
+        justify-content: center;
+        text-align: center;
+        padding: 0m;
+    }
+    label{
+        display: flex;
+        flex-wrap: wrap;
+        margin-bottom: 1rem;
+        max-width: 10rem;
+
+    }
+    .col-1, .col-2, #signature{
+        width: 80%;
+    }
+    #signature label{
+        display: flex;
+        flex-direction: column;
+    }
+    #form-school, #form-position, #form-uniform{
+        flex-wrap: nowrap;
+        height: auto;
+        
+        
+    }
+
 }
